--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
                 <configuration>
                     <fork>true</fork>
                     <executable>C:\Program Files\Java\jdk1.8.0_121\bin\javac.exe</executable>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
 
             </plugin>
